* Version 4.0.4 (unreleased)
 ** Bugfix: Fix PIV feature detection for some YubiKey NEO versions.
 ** Bugfix: Fix argument short form for --period when adding TOTP credentials.
 ** Bugfix: More strict validation for some arguments, resulting in better error messages.

* Version 4.0.3 (released 2021-05-17)
 ** Add support for fido reset over NFC.
 ** Bugfix: The --touch argument to piv change-management-key was ignored.
 ** Bugfix: Don't prompt for password when importing PIV key/cert if file is invalid.
 ** Bugfix: Fix setting touch-eject/auto-eject for YubiKey 4 and NEO.
 ** Bugfix: Detect PKCS#12 format when outer sequence uses indefinite length.
 ** Dependency: Add support for Click 8.

* Version 4.0.2 (released 2021-04-12)
 ** Update device names.
 ** Add read_info output to the --diagnose command, and show exception types.
 ** Bugfix: Fix read_info for YubiKey Plus.

* Version 4.0.1 (released 2021-03-29)
 ** Add support for YK5-based FIPS YubiKeys.
 ** Bugfix: Fix OTP device enumeration on Win32.

* Version 4.0.0 (released 2021-03-02)
 ** Drop support for Python < 3.6.
 ** Drop reliance on libusb and libykpersonalize.
 ** Support the "fido" and "otp" subcommands over NFC (using the --reader flag)
 ** New "ykman --diagnose" command to aid in troubleshooting.
 ** New "ykman apdu" command for sending raw APDUs over the smart card interface.
 ** Restructuring of subcommands, with aliases for old versions (to be removed
    in a future release).
 ** Major changes to the underlying "library" code:
  *** New "yubikit" package added for custom development and advanced scripting.
  *** Type hints added for a large part of the "public" API.
 ** OpenPGP: Add support for KDF enabled YubiKeys.
 ** Static password: Add support for FR, IT, UK and BEPO keyboard layouts.

* Version 3.1.2 (released 2021-01-21)
 ** Bugfix release: Fix dependency on python-fido2 version.

* Version 3.1.1 (released 2020-01-29)
 ** Add support for YubiKey 5C NFC